[package]
name = "codex"
version = "0.1.0"
edition = "2021"
author = ["Lautaro Acosta Quintana <acostaquintanalautaro@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to manage tasks inside the terminal"
readme = "README.md"
homepage = "https://github.com/windrnr/Codex"
repository = "https://github.com/windrnr/Codex"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "cargo"] }
colored = "2.1.0"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"]}
